# pneumonia-classification

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  train.py
.github/workflows/: workflow.yml
configs/: config.yaml
configs/data/: pneumonia.yaml
configs/model/: cnn.yaml  dinov2.yaml  resnet18.yaml  vgg16.yaml  yolo11l.yaml
configs/trainer/: default.yaml
data/: download.py
dataset/: datamodule.py
models/cnn/: cnn.py
models/embedding-classifier/: embedding-classifier.py
models/embedding_classifier/: embedding_classifier.py
models/resnet18/: resnet18.py
models/vgg16/: vgg16.py
models/yolo11l/: yolo11l.py
tests/: datamodule_test.py
