[tool.poetry]
name = "pneumonia-detection"
version = "0.6.3"
description = "A project to classify pneumonia from chest X-ray images."
authors = ["Andrii Norets <104683293+KabinetFnsv@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.6.0"
torchvision = "^0.21.0"
matplotlib = "^3.10.1"
kaggle = "^1.6.17"
kagglehub = "^0.3.10"
ruff = "^0.9.10"
pytorch-lightning = "^2.5.0.post0"
pytest = "^8.3.5"
omegaconf = "^2.3.0"
structlog = "^25.2.0"
wandb = "^0.19.8"
datasets = "^3.6.0"
ultralytics = "^8.3.165"
transformers = "^4.54.0"
scikit-learn = "^1.7.1"
hydra-core = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
